@@ -1,3 +1,8 @@
+2007-10-28  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclUtil.c (Tcl_ConcatObj): optimise for some of the
+	concatenees being empty objs [Bug 1447328]
+	
 2007-10-28  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclEncoding.c (TclInitEncodingSubsystem): Hard code the
